<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/explore"
            android:icon="@drawable/explore_state_drawable"
            android:title="@string/explore"/>
        <item android:id="@+id/live_chat"
            android:icon="@drawable/live_chat_state_drawable"
            android:title="@string/live_chat"/>
        <item android:id="@+id/gallery"
            android:icon="@drawable/gallery_state_drawable"
            android:title="@string/gallery"/>
        <item android:id="@+id/wishlist"
            android:icon="@drawable/wishlist_state_drawable"
            android:title="@string/wishlist"/>
        <item android:id="@+id/e_magazine"
            android:icon="@drawable/e_magazine_state_drawable"
            android:title="@string/e_magzine"/>
    </group>

</menu>